// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Popover default 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "64px",
              "width": "100%",
            }
          }
        >
          <Popover
            ariaLabel="View more info"
            className=""
            icon=""
            label="Job #100"
          >
            <ForwardRef(PopoverDisclosure)
              animated={false}
              animating={false}
              aria-label="View more info"
              baseId="id-test"
              className="button"
              hide={[Function]}
              modal={true}
              onClick={[Function]}
              place={[Function]}
              placement="top"
              setAnimated={[Function]}
              setBaseId={[Function]}
              setModal={[Function]}
              setVisible={[Function]}
              show={[Function]}
              stopAnimation={[Function]}
              toggle={[Function]}
              unstable_arrowRef={
                Object {
                  "current": <div
                    class="arrow"
                    style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                  >
                    <svg
                      style="transform: rotateZ(180deg);"
                      viewBox="0 0 30 30"
                    >
                      <path
                        class="stroke"
                        d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                      />
                      <path
                        class="fill"
                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                      />
                    </svg>
                  </div>,
                }
              }
              unstable_arrowStyles={Object {}}
              unstable_disclosureRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    
                    <span
                      class="label"
                    >
                      Job #100
                    </span>
                  </button>,
                }
              }
              unstable_idCountRef={
                Object {
                  "current": 0,
                }
              }
              unstable_originalPlacement="top"
              unstable_popoverRef={
                Object {
                  "current": <div
                    aria-modal="true"
                    class="popover"
                    data-dialog="true"
                    hidden=""
                    id="id-test"
                    role="dialog"
                    style="display: none; position: fixed; left: 100%; top: 100%;"
                    tabindex="0"
                  >
                    <div
                      class="arrow"
                      style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                    >
                      <svg
                        style="transform: rotateZ(180deg);"
                        viewBox="0 0 30 30"
                      >
                        <path
                          class="stroke"
                          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                        />
                        <path
                          class="fill"
                          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                        />
                      </svg>
                    </div>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <button
                      class="root closeBtn medium"
                      type="button"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#close"
                        />
                      </svg>
                    </button>
                  </div>,
                }
              }
              unstable_popoverStyles={
                Object {
                  "left": "100%",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              unstable_referenceRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    
                    <span
                      class="label"
                    >
                      Job #100
                    </span>
                  </button>,
                }
              }
              unstable_update={[Function]}
              visible={false}
            >
              <button
                aria-controls="id-test"
                aria-expanded={false}
                aria-haspopup="dialog"
                aria-label="View more info"
                className="button"
                onClick={[Function]}
                onClickCapture={[Function]}
                onKeyDown={[Function]}
                onKeyPressCapture={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                type="button"
              >
                <span
                  className="label"
                >
                  Job #100
                </span>
              </button>
            </ForwardRef(PopoverDisclosure)>
            <ForwardRef(Popover)
              animated={false}
              animating={false}
              baseId="id-test"
              className="popover"
              hide={[Function]}
              modal={true}
              place={[Function]}
              placement="top"
              setAnimated={[Function]}
              setBaseId={[Function]}
              setModal={[Function]}
              setVisible={[Function]}
              show={[Function]}
              stopAnimation={[Function]}
              tabIndex={0}
              toggle={[Function]}
              unstable_arrowRef={
                Object {
                  "current": <div
                    class="arrow"
                    style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                  >
                    <svg
                      style="transform: rotateZ(180deg);"
                      viewBox="0 0 30 30"
                    >
                      <path
                        class="stroke"
                        d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                      />
                      <path
                        class="fill"
                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                      />
                    </svg>
                  </div>,
                }
              }
              unstable_arrowStyles={Object {}}
              unstable_disclosureRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    
                    <span
                      class="label"
                    >
                      Job #100
                    </span>
                  </button>,
                }
              }
              unstable_idCountRef={
                Object {
                  "current": 0,
                }
              }
              unstable_originalPlacement="top"
              unstable_popoverRef={
                Object {
                  "current": <div
                    aria-modal="true"
                    class="popover"
                    data-dialog="true"
                    hidden=""
                    id="id-test"
                    role="dialog"
                    style="display: none; position: fixed; left: 100%; top: 100%;"
                    tabindex="0"
                  >
                    <div
                      class="arrow"
                      style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                    >
                      <svg
                        style="transform: rotateZ(180deg);"
                        viewBox="0 0 30 30"
                      >
                        <path
                          class="stroke"
                          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                        />
                        <path
                          class="fill"
                          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                        />
                      </svg>
                    </div>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <button
                      class="root closeBtn medium"
                      type="button"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#close"
                        />
                      </svg>
                    </button>
                  </div>,
                }
              }
              unstable_popoverStyles={
                Object {
                  "left": "100%",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              unstable_referenceRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    
                    <span
                      class="label"
                    >
                      Job #100
                    </span>
                  </button>,
                }
              }
              unstable_update={[Function]}
              visible={false}
            >
              <Portal>
                <Portal
                  containerInfo={
                    <div
                      class="__reakit-portal"
                    >
                      <div
                        aria-modal="true"
                        class="popover"
                        data-dialog="true"
                        hidden=""
                        id="id-test"
                        role="dialog"
                        style="display: none; position: fixed; left: 100%; top: 100%;"
                        tabindex="0"
                      >
                        <div
                          class="arrow"
                          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                        >
                          <svg
                            style="transform: rotateZ(180deg);"
                            viewBox="0 0 30 30"
                          >
                            <path
                              class="stroke"
                              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                            />
                            <path
                              class="fill"
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            />
                          </svg>
                        </div>
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                        <button
                          class="root closeBtn medium"
                          type="button"
                        >
                          <svg
                            class="icon"
                          >
                            <use
                              xlink:href="#close"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  }
                >
                  <div
                    aria-modal={true}
                    className="popover"
                    data-dialog={true}
                    hidden={true}
                    id="id-test"
                    onAnimationEnd={[Function]}
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onTransitionEnd={[Function]}
                    role="dialog"
                    style={
                      Object {
                        "display": "none",
                        "left": "100%",
                        "position": "fixed",
                        "top": "100%",
                      }
                    }
                    tabIndex={0}
                  >
                    <ForwardRef(PopoverArrow)
                      animated={false}
                      animating={false}
                      baseId="id-test"
                      className="arrow"
                      hide={[Function]}
                      modal={true}
                      place={[Function]}
                      placement="top"
                      setAnimated={[Function]}
                      setBaseId={[Function]}
                      setModal={[Function]}
                      setVisible={[Function]}
                      show={[Function]}
                      size={16}
                      stopAnimation={[Function]}
                      toggle={[Function]}
                      unstable_arrowRef={
                        Object {
                          "current": <div
                            class="arrow"
                            style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                          >
                            <svg
                              style="transform: rotateZ(180deg);"
                              viewBox="0 0 30 30"
                            >
                              <path
                                class="stroke"
                                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                              />
                              <path
                                class="fill"
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              />
                            </svg>
                          </div>,
                        }
                      }
                      unstable_arrowStyles={Object {}}
                      unstable_disclosureRef={
                        Object {
                          "current": <button
                            aria-controls="id-test"
                            aria-expanded="false"
                            aria-haspopup="dialog"
                            aria-label="View more info"
                            class="button"
                            type="button"
                          >
                            
                            <span
                              class="label"
                            >
                              Job #100
                            </span>
                          </button>,
                        }
                      }
                      unstable_idCountRef={
                        Object {
                          "current": 0,
                        }
                      }
                      unstable_originalPlacement="top"
                      unstable_popoverRef={
                        Object {
                          "current": <div
                            aria-modal="true"
                            class="popover"
                            data-dialog="true"
                            hidden=""
                            id="id-test"
                            role="dialog"
                            style="display: none; position: fixed; left: 100%; top: 100%;"
                            tabindex="0"
                          >
                            <div
                              class="arrow"
                              style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                            >
                              <svg
                                style="transform: rotateZ(180deg);"
                                viewBox="0 0 30 30"
                              >
                                <path
                                  class="stroke"
                                  d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                                />
                                <path
                                  class="fill"
                                  d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                />
                              </svg>
                            </div>
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                            <button
                              class="root closeBtn medium"
                              type="button"
                            >
                              <svg
                                class="icon"
                              >
                                <use
                                  xlink:href="#close"
                                />
                              </svg>
                            </button>
                          </div>,
                        }
                      }
                      unstable_popoverStyles={
                        Object {
                          "left": "100%",
                          "position": "fixed",
                          "top": "100%",
                        }
                      }
                      unstable_referenceRef={
                        Object {
                          "current": <button
                            aria-controls="id-test"
                            aria-expanded="false"
                            aria-haspopup="dialog"
                            aria-label="View more info"
                            class="button"
                            type="button"
                          >
                            
                            <span
                              class="label"
                            >
                              Job #100
                            </span>
                          </button>,
                        }
                      }
                      unstable_update={[Function]}
                      visible={false}
                    >
                      <div
                        className="arrow"
                        style={
                          Object {
                            "fontSize": 16,
                            "height": "1em",
                            "pointerEvents": "none",
                            "top": "100%",
                            "width": "1em",
                          }
                        }
                      >
                        <svg
                          style={
                            Object {
                              "transform": "rotateZ(180deg)",
                            }
                          }
                          viewBox="0 0 30 30"
                        >
                          <path
                            className="stroke"
                            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                          />
                          <path
                            className="fill"
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                          />
                        </svg>
                      </div>
                    </ForwardRef(PopoverArrow)>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <Icon
                      as="button"
                      className="closeBtn"
                      glyph="close"
                      onClick={[Function]}
                      size="medium"
                      type="button"
                    >
                      <button
                        className="root closeBtn medium"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          className="icon"
                        >
                          <use
                            xlinkHref="#close"
                          />
                        </svg>
                      </button>
                    </Icon>
                  </div>
                </Portal>
              </Portal>
            </ForwardRef(Popover)>
          </Popover>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-alert-circle"
        fill="none"
        id="alert-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 8v4M12 16h.01"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-check-circle"
        fill="none"
        id="check-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 11.08V12a10 10 0 11-5.93-9.14"
        />
        <path
          d="M22 4L12 14.01l-3-3"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;

exports[`Storyshots UI/Popover with icon 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "64px",
              "width": "100%",
            }
          }
        >
          <Popover
            ariaLabel="View more info"
            className=""
            icon="help"
            label=""
          >
            <ForwardRef(PopoverDisclosure)
              animated={false}
              animating={false}
              aria-label="View more info"
              baseId="id-test"
              className="button"
              hide={[Function]}
              modal={true}
              onClick={[Function]}
              place={[Function]}
              placement="top"
              setAnimated={[Function]}
              setBaseId={[Function]}
              setModal={[Function]}
              setVisible={[Function]}
              show={[Function]}
              stopAnimation={[Function]}
              toggle={[Function]}
              unstable_arrowRef={
                Object {
                  "current": <div
                    class="arrow"
                    style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                  >
                    <svg
                      style="transform: rotateZ(180deg);"
                      viewBox="0 0 30 30"
                    >
                      <path
                        class="stroke"
                        d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                      />
                      <path
                        class="fill"
                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                      />
                    </svg>
                  </div>,
                }
              }
              unstable_arrowStyles={Object {}}
              unstable_disclosureRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    <span
                      class="root icon medium"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#help"
                        />
                      </svg>
                    </span>
                    
                  </button>,
                }
              }
              unstable_idCountRef={
                Object {
                  "current": 0,
                }
              }
              unstable_originalPlacement="top"
              unstable_popoverRef={
                Object {
                  "current": <div
                    aria-modal="true"
                    class="popover"
                    data-dialog="true"
                    hidden=""
                    id="id-test"
                    role="dialog"
                    style="display: none; position: fixed; left: 100%; top: 100%;"
                    tabindex="0"
                  >
                    <div
                      class="arrow"
                      style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                    >
                      <svg
                        style="transform: rotateZ(180deg);"
                        viewBox="0 0 30 30"
                      >
                        <path
                          class="stroke"
                          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                        />
                        <path
                          class="fill"
                          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                        />
                      </svg>
                    </div>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <button
                      class="root closeBtn medium"
                      type="button"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#close"
                        />
                      </svg>
                    </button>
                  </div>,
                }
              }
              unstable_popoverStyles={
                Object {
                  "left": "100%",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              unstable_referenceRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    <span
                      class="root icon medium"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#help"
                        />
                      </svg>
                    </span>
                    
                  </button>,
                }
              }
              unstable_update={[Function]}
              visible={false}
            >
              <button
                aria-controls="id-test"
                aria-expanded={false}
                aria-haspopup="dialog"
                aria-label="View more info"
                className="button"
                onClick={[Function]}
                onClickCapture={[Function]}
                onKeyDown={[Function]}
                onKeyPressCapture={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                type="button"
              >
                <Icon
                  as="span"
                  className="icon"
                  glyph="help"
                  size="medium"
                >
                  <span
                    className="root icon medium"
                  >
                    <svg
                      className="icon"
                    >
                      <use
                        xlinkHref="#help"
                      />
                    </svg>
                  </span>
                </Icon>
              </button>
            </ForwardRef(PopoverDisclosure)>
            <ForwardRef(Popover)
              animated={false}
              animating={false}
              baseId="id-test"
              className="popover"
              hide={[Function]}
              modal={true}
              place={[Function]}
              placement="top"
              setAnimated={[Function]}
              setBaseId={[Function]}
              setModal={[Function]}
              setVisible={[Function]}
              show={[Function]}
              stopAnimation={[Function]}
              tabIndex={0}
              toggle={[Function]}
              unstable_arrowRef={
                Object {
                  "current": <div
                    class="arrow"
                    style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                  >
                    <svg
                      style="transform: rotateZ(180deg);"
                      viewBox="0 0 30 30"
                    >
                      <path
                        class="stroke"
                        d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                      />
                      <path
                        class="fill"
                        d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                      />
                    </svg>
                  </div>,
                }
              }
              unstable_arrowStyles={Object {}}
              unstable_disclosureRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    <span
                      class="root icon medium"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#help"
                        />
                      </svg>
                    </span>
                    
                  </button>,
                }
              }
              unstable_idCountRef={
                Object {
                  "current": 0,
                }
              }
              unstable_originalPlacement="top"
              unstable_popoverRef={
                Object {
                  "current": <div
                    aria-modal="true"
                    class="popover"
                    data-dialog="true"
                    hidden=""
                    id="id-test"
                    role="dialog"
                    style="display: none; position: fixed; left: 100%; top: 100%;"
                    tabindex="0"
                  >
                    <div
                      class="arrow"
                      style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                    >
                      <svg
                        style="transform: rotateZ(180deg);"
                        viewBox="0 0 30 30"
                      >
                        <path
                          class="stroke"
                          d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                        />
                        <path
                          class="fill"
                          d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                        />
                      </svg>
                    </div>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <button
                      class="root closeBtn medium"
                      type="button"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#close"
                        />
                      </svg>
                    </button>
                  </div>,
                }
              }
              unstable_popoverStyles={
                Object {
                  "left": "100%",
                  "position": "fixed",
                  "top": "100%",
                }
              }
              unstable_referenceRef={
                Object {
                  "current": <button
                    aria-controls="id-test"
                    aria-expanded="false"
                    aria-haspopup="dialog"
                    aria-label="View more info"
                    class="button"
                    type="button"
                  >
                    <span
                      class="root icon medium"
                    >
                      <svg
                        class="icon"
                      >
                        <use
                          xlink:href="#help"
                        />
                      </svg>
                    </span>
                    
                  </button>,
                }
              }
              unstable_update={[Function]}
              visible={false}
            >
              <Portal>
                <Portal
                  containerInfo={
                    <div
                      class="__reakit-portal"
                    >
                      <div
                        aria-modal="true"
                        class="popover"
                        data-dialog="true"
                        hidden=""
                        id="id-test"
                        role="dialog"
                        style="display: none; position: fixed; left: 100%; top: 100%;"
                        tabindex="0"
                      >
                        <div
                          class="arrow"
                          style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                        >
                          <svg
                            style="transform: rotateZ(180deg);"
                            viewBox="0 0 30 30"
                          >
                            <path
                              class="stroke"
                              d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                            />
                            <path
                              class="fill"
                              d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                            />
                          </svg>
                        </div>
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                        <button
                          class="root closeBtn medium"
                          type="button"
                        >
                          <svg
                            class="icon"
                          >
                            <use
                              xlink:href="#close"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  }
                >
                  <div
                    aria-modal={true}
                    className="popover"
                    data-dialog={true}
                    hidden={true}
                    id="id-test"
                    onAnimationEnd={[Function]}
                    onBlur={[Function]}
                    onKeyDown={[Function]}
                    onTransitionEnd={[Function]}
                    role="dialog"
                    style={
                      Object {
                        "display": "none",
                        "left": "100%",
                        "position": "fixed",
                        "top": "100%",
                      }
                    }
                    tabIndex={0}
                  >
                    <ForwardRef(PopoverArrow)
                      animated={false}
                      animating={false}
                      baseId="id-test"
                      className="arrow"
                      hide={[Function]}
                      modal={true}
                      place={[Function]}
                      placement="top"
                      setAnimated={[Function]}
                      setBaseId={[Function]}
                      setModal={[Function]}
                      setVisible={[Function]}
                      show={[Function]}
                      size={16}
                      stopAnimation={[Function]}
                      toggle={[Function]}
                      unstable_arrowRef={
                        Object {
                          "current": <div
                            class="arrow"
                            style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                          >
                            <svg
                              style="transform: rotateZ(180deg);"
                              viewBox="0 0 30 30"
                            >
                              <path
                                class="stroke"
                                d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                              />
                              <path
                                class="fill"
                                d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                              />
                            </svg>
                          </div>,
                        }
                      }
                      unstable_arrowStyles={Object {}}
                      unstable_disclosureRef={
                        Object {
                          "current": <button
                            aria-controls="id-test"
                            aria-expanded="false"
                            aria-haspopup="dialog"
                            aria-label="View more info"
                            class="button"
                            type="button"
                          >
                            <span
                              class="root icon medium"
                            >
                              <svg
                                class="icon"
                              >
                                <use
                                  xlink:href="#help"
                                />
                              </svg>
                            </span>
                            
                          </button>,
                        }
                      }
                      unstable_idCountRef={
                        Object {
                          "current": 0,
                        }
                      }
                      unstable_originalPlacement="top"
                      unstable_popoverRef={
                        Object {
                          "current": <div
                            aria-modal="true"
                            class="popover"
                            data-dialog="true"
                            hidden=""
                            id="id-test"
                            role="dialog"
                            style="display: none; position: fixed; left: 100%; top: 100%;"
                            tabindex="0"
                          >
                            <div
                              class="arrow"
                              style="font-size: 16px; width: 1em; height: 1em; pointer-events: none; top: 100%;"
                            >
                              <svg
                                style="transform: rotateZ(180deg);"
                                viewBox="0 0 30 30"
                              >
                                <path
                                  class="stroke"
                                  d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                                />
                                <path
                                  class="fill"
                                  d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                                />
                              </svg>
                            </div>
                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                            <button
                              class="root closeBtn medium"
                              type="button"
                            >
                              <svg
                                class="icon"
                              >
                                <use
                                  xlink:href="#close"
                                />
                              </svg>
                            </button>
                          </div>,
                        }
                      }
                      unstable_popoverStyles={
                        Object {
                          "left": "100%",
                          "position": "fixed",
                          "top": "100%",
                        }
                      }
                      unstable_referenceRef={
                        Object {
                          "current": <button
                            aria-controls="id-test"
                            aria-expanded="false"
                            aria-haspopup="dialog"
                            aria-label="View more info"
                            class="button"
                            type="button"
                          >
                            <span
                              class="root icon medium"
                            >
                              <svg
                                class="icon"
                              >
                                <use
                                  xlink:href="#help"
                                />
                              </svg>
                            </span>
                            
                          </button>,
                        }
                      }
                      unstable_update={[Function]}
                      visible={false}
                    >
                      <div
                        className="arrow"
                        style={
                          Object {
                            "fontSize": 16,
                            "height": "1em",
                            "pointerEvents": "none",
                            "top": "100%",
                            "width": "1em",
                          }
                        }
                      >
                        <svg
                          style={
                            Object {
                              "transform": "rotateZ(180deg)",
                            }
                          }
                          viewBox="0 0 30 30"
                        >
                          <path
                            className="stroke"
                            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
                          />
                          <path
                            className="fill"
                            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
                          />
                        </svg>
                      </div>
                    </ForwardRef(PopoverArrow)>
                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                    <Icon
                      as="button"
                      className="closeBtn"
                      glyph="close"
                      onClick={[Function]}
                      size="medium"
                      type="button"
                    >
                      <button
                        className="root closeBtn medium"
                        onClick={[Function]}
                        type="button"
                      >
                        <svg
                          className="icon"
                        >
                          <use
                            xlinkHref="#close"
                          />
                        </svg>
                      </button>
                    </Icon>
                  </div>
                </Portal>
              </Portal>
            </ForwardRef(Popover)>
          </Popover>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-alert-circle"
        fill="none"
        id="alert-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 8v4M12 16h.01"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-check-circle"
        fill="none"
        id="check-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 11.08V12a10 10 0 11-5.93-9.14"
        />
        <path
          d="M22 4L12 14.01l-3-3"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;
